<resources>
    <string name="app_name">Patrimônio</string>
    <!--<string name="google_api_key">AIzaSyBWrmMd7NSysn23uc7qTbN3us7Q6JXcCKQ</string>-->

    <string name="str_entrar">Entrar</string>
    <string name="str_solicitaracesso">Solicitar Acesso</string>
    <string name="str_login_hint">Login</string>
    <string name="str_senha_hint">Senha</string>
    <string name="str_descricao_bem_hint">Descrição do Bem</string>
    <string name="str_dataaquisicao_bem_hint">Data de Aqusição</string>
    <string name="str_aquisicao_bem_prompt">Aqusição</string>
    <string name="str_valoraquisicao_bem_hint">Valor Aquisição</string>
    <string name="str_valorresidual_bem_hint">Valor Residual</string>
    <string name="str_vidautil_bem_hint">Vida Útil</string>

    <string name="criacao_layout_bem_situacao">Bom</string>
    <string name="criacao_layout_bem_descricao">Cadeira</string>
    <string name="criacao_layout_bem_classificacao">Sem classificação</string>
    <string name="criacao_layout_bem_unidade">Sempla</string>
    <string name="criacao_layout_bem_setor">Informática</string>

    <string name="criacaoLayoutEscolherSetorBoasVindas">Olá, fulano. Seja bem vindo.</string>
    <string name="criacaoLayoutEscolherSetor">Escolha o setor para iniciar.</string>
    <string name="str_escolher">Escolher</string>
    <string name="action_adicionar_bem">Adicionar Bem</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="str_escolher_departamento">Escolha um departamento</string>
    <string name="str_escolher_bem_tipo">Tipo do Bem</string>
    <string name="str_cadastrarbem_tombo">Tombo</string>
    <string name="str_numerotombo_hint">Número do Tombo</string>
    <string name="str_listabem_longclick_escolher">Escolha uma ação</string>
    <string name="action_excluir_bem">Excluir Bem</string>
    <string name="pergunta_excluir_bem">Confirmar</string>
    <string name="pergunta_excluir_bem_msg">Deseja realmente excluir este bem?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="action_add_imagem_bem">AdicionarImagem</string>
    <string name="str_bem_localizacao">Localização</string>
    <string name="ok">OK</string>
    <string name="action_alterar_departamento">Alterar Departamento</string>
    <string name="action_ler_barcode">QR Code</string>
    <string name="action_solicitar_placas">Solicitar Placas</string>
    <string name="strUsuarioSolicitante">Usuário Solicitante</string>
    <string name="strDepartamento">Departamento</string>
    <string name="strQuantidade">Quantidade</string>
    <string name="gcm_naosuportado">GCM não suportado</string>
    <string name="action_logout">Sair</string>
    <string name="action_localizacao_bem">Mapa</string>

    <!--Constantes-->
    <string name="msgConexaoErro">Ocorreu um erro na conexão. Tentar mais tarde.</string>
    <string name="msgDepartamentoAlteradoComSucesso">Departamento alterado com sucesso.</string>
    <string name="criacao_layout_departamento">0000 - Sem departamento</string>
    <string name="criacao_layout_departamento_escolhido">Departamento Escolhido</string>
    <string name="criacao_layout_departamento_atual">Departamento atual</string>


</resources>
