<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <View style="@style/Divider_8dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/etDescricaoBem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/str_descricao_bem_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_numerotombo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_gravity="bottom"
                    android:hint="@string/str_numerotombo_hint"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Aquisição"
                    android:textColor="#99000000"/>

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_aquisicao_bem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_dataaquisicao_bem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:layout_gravity="bottom"
                    android:hint="@string/str_dataaquisicao_bem_hint"/>

            </android.support.design.widget.TextInputLayout>

            <View style="@style/Divider_8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Tipo do Bem"
                    android:textColor="#99000000"/>

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_bem_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Situação"
                    android:textColor="#99000000"/>

                <!--<View style="@style/Divider_8dp"/>-->

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_situacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:paddingTop="16dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="Tipo de Depreciação"
                    android:textColor="#99000000"/>

                <!--<View style="@style/Divider_8dp"/>-->

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_tipodepreciacao"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_valoraquisicao_bem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_gravity="end"
                    android:hint="@string/str_valoraquisicao_bem_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_valorresidual_bem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_gravity="end"
                    android:hint="@string/str_valorresidual_bem_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/et_vidautil_bem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:hint="@string/str_vidautil_bem_hint"/>

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <Button
                    android:id="@+id/btn_bem_salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Salvar"
                    android:layout_alignParentRight="true"/>

                <Button
                    android:id="@+id/btn_bem_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Cancelar"
                    android:layout_toLeftOf="@+id/btn_bem_salvar"/>

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>